<resources>
    <string name="app_name">T-Navi</string>
    <string name="stop">stop</string>
    <string name="vertical_line">vertical line</string>
    <string name="route">маршрут:</string>
    <string name="colon">:</string>
    <string name="template_clock_hours">00</string>
    <string name="template_clock_minutes">00</string>
    <string name="template_weekday">понеделник</string>
    <string name="template_day">01</string>
    <string name="template_month">януари</string>
    <string name="template_year">2022</string>
    <string name="template_line">999</string>
    <string name="template_direction">ТЕСТ ДРАЙВ</string>
    <string name="template_stop">Бл. 407 /Вл-во/</string>
    <string name="next_stop_">Следваща спирка:</string>
    <string name="stop_">Спирка:</string>
    <string name="template_stop_title">Централна поща (за Аспарухово)</string>
    <string name="start">Започни пътуване</string>
    <string name="settings">Настройки</string>
    <string name="label_homePage">Начало</string>
    <string name="choose_line">Изберете линия:</string>
    <string name="choose_direction">Посока на линията:</string>
    <string name="exit_route">Прекъсване на пътуването</string>
    <string name="exit_route_question">Желате ли да прекъснете пътуването?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="cancel">Отказ</string>
    <string name="logo">logo</string>
    <string name="location_access_denied">Достъпът до местоположението е отказан!</string>
    <string name="enable_location">Включете местоположението на устройството и рестартирайте пътуването!</string>
    <string name="stop_title">Име на спирката: *</string>
    <string name="select_audio_stop_text">Посочете аудио за гласово оповестяване на спирката:</string>
    <string name="choose_file">Избери аудио</string>
    <string name="pick_location">Посочете местоположението на спирката на картата: *</string>
    <string name="label_create_stop">Създаване на спирка:</string>
    <string name="label_edit_stop">Промяна на спирка:</string>
    <string name="action_save">Запазване</string>
    <string name="stops_manager">Мениджър на спирки</string>
    <string name="lines_manager">Мениджър на линии</string>
    <string name="error">Грешка</string>
    <string name="error_message">Възникна грешка.</string>
    <string name="action_create">Създаване</string>
    <string name="was_created">беше създадена</string>
    <string name="was_modified">беше променена</string>
    <string name="was_deleted">беше изтрита</string>
    <string name="id_">ID:</string>
    <string name="action_delete">Изтриване</string>
    <string name="stop_delete">Опитвате се да изтриете тази спирка. Желаете ли да продължите?</string>
    <string name="export_data">Експортиране на всички данни</string>
    <string name="import_data">Импортиране на данни</string>
    <string name="storage_access_denied">Нужен е достъп до файловете, за да използвате системата!</string>
    <string name="gps_status">Статус на местоположението</string>
    <string name="data_exported">Данните бяха експортирани в папката /Documents/</string>
    <string name="data_imported">Данните бяха импортирани успешно в системата!</string>
    <string name="import_data_message">"ВНИМАНИЕ!\n\nТова действие ще замести настоящите данни в системата. Желаете ли да продължите?"</string>
    <string name="form_incomplete">Не сте попълнили задължителните полета! (*)</string>
    <string name="ok">Ок</string>
    <string name="empty_list_stops">Няма спирки.</string>
    <string name="empty_list_destinations">Няма дестинации.</string>
    <string name="empty_list_lines">Няма линии.</string>
    <string name="direction_title">Име на посоката: *</string>
    <string name="select_audio_direction_text">Посочете аудио за гласово оповестяване на посоката:</string>
    <string name="pick_stops">Изберете спирки:</string>
    <string name="label_edit_direction">Промяна на посока:</string>
    <string name="label_create_direction">Създаване на посока:</string>
    <string name="direction_delete">Опитвате се да изтриете тази дестинация. Желаете ли да продължите?</string>
    <string name="direction_">Посока:</string>
    <string name="label_create_line">Създаване на линия:</string>
    <string name="line_number">Номер на линията: (*)</string>
    <string name="line_">Линия:</string>
    <string name="label_edit_line">Промяна на линия:</string>
    <string name="line_exists">Опитвате се да създадете съществуваща линия!</string>
    <string name="reset_data">Нулиране  с фабричните настройки</string>
    <string name="reset_data_message">"ВНИМАНИЕ!\n\nТова действие ще нулира системата до нейните фабрични настройки по подразбиране като изтрие всички маршрути и спирки. Желаете ли да продължите?"</string>
    <string name="line_delete">Опитвате се да изтриете тази линия. Желаете ли да продължите?</string>
    <string name="search">Търсене…</string>
    <string name="remove_stop_from_route">Тази спирка ще бъде премахната от маршрута. Желаете ли да продължите?</string>
    <string name="error_map">Възникна грешка при зареждането на картата</string>
    <string name="selected_audio_file">Избран файл:</string>
    <string name="copyright_text">© Kristiyan Strahilov</string>
    <string name="file_upload_error_message">Възникна грешка при записването на файла!</string>
    <string name="select_audio_line_text">Посочете аудио за гласово оповестяване на линията:</string>
    <string name="action_edit">Промяна</string>
    <string name="system_announcements">Системни анонси</string>
    <string name="none">Няма</string>
    <string name="file_line">file_line</string>
    <string name="file_direction">file_direction</string>
    <string name="file_next_stop">file_next_stop</string>
    <string name="file_stop">file_stop</string>
    <string name="file_upload_uploaded">Файлът е записан успешно!</string>
    <string name="data_was_reset">Системата е върната до настройките по подразбиране.</string>
    <string name="coming_soon">Очаквайте скоро!</string>
    <string name="display_title">Екранно име: *</string>
</resources>