<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".EditLineActivity">


    <EditText
        android:id="@+id/et_line_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="stopTitle"
        android:ems="10"
        android:hint="@string/line_number"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:textColorHint="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_audio_line_text" />

        <Button
            android:id="@+id/btn_choose_audio_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_file"
            app:icon="@drawable/ic_baseline_file_upload_white_24"
            app:iconGravity="textStart" />

        <LinearLayout
            android:id="@+id/audio_line_file_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_audio_file" />

            <TextView
                android:id="@+id/tv_selected_audio_line_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>