<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@color/white"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".RouteActivity">

    <LinearLayout
        android:id="@+id/row_line_direction"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:background="@color/blue">

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:fontFamily="@font/arialbd"
                android:gravity="center"
                android:includeFontPadding="false"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/template_line"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/tv_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/arialbd"
                android:includeFontPadding="false"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/template_direction"
                android:textColor="@color/white"
                android:textSize="57sp"
                tools:layout_editor_absoluteX="11dp" />
        </FrameLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_line_direction">

        <ImageView
            android:id="@+id/gps_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/gps_status"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_gps_off_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialbd"
            android:text="@string/route"
            android:textColor="@color/gray"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/vertical_line"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vertical_line" />

        <ListView
            android:id="@+id/lv_route"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:clickable="false"
            android:contextClickable="false"
            android:divider="@null"
            android:focusable="false"
            android:longClickable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/row_divider"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row_datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row_stop_info"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_next_stop_info_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:includeFontPadding="false"
            android:text="@string/next_stop_"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_stop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/arialbd"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/template_stop_title"
            android:textColor="@color/green"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_next_stop_info_row" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/row_datetime"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextClock
            android:id="@+id/time_hours"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/arial"
            android:format24Hour="HH"
            android:includeFontPadding="false"
            android:text="@string/template_clock_hours"
            android:textColor="@color/black"
            android:textSize="85sp" />

        <TextView
            android:id="@+id/time_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:includeFontPadding="false"
            android:text="@string/colon"
            android:textColor="@color/black"
            android:textSize="85sp" />

        <TextClock
            android:id="@+id/time_minutes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/arial"
            android:format24Hour="mm"
            android:includeFontPadding="false"
            android:text="@string/template_clock_minutes"
            android:textColor="@color/black"
            android:textSize="85sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/col_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp">

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:format24Hour="EEEE"
                android:text="@string/template_weekday"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial"
                    android:format24Hour="dd"
                    android:text="@string/template_day"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/arial"
                    android:format24Hour="MMMM"
                    android:text="@string/template_month"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial"
                    android:format24Hour="yyyy"
                    android:text="@string/template_year"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_loading"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:contentDescription="@string/logo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_loading_screen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>